--- a/src/entrance/entrance.css
+++ b/src/entrance/entrance.css
@@ -4,14 +4,57 @@
     box-sizing: border-box;
 }
 
-/* @keyframes moveUp {
+@keyframes moveUp {
     from {
       transform: translateY(0);
     }
     to {
       transform: translateY(-80px); 
     }
-} */
+}
+
+@keyframes moveDown {
+    from {
+        transform: translateY(0);
+    }
+    to {
+        transform: translateY(50px);
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    10% {
+        opacity: 0.1;
+    }
+    20% {
+        opacity: 0.2;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes moveDownAndFadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(0);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(50px);
+    }
+}
+
+.animate-language {
+    animation: moveDownAndFadeIn 1s ease forwards;
+}
+
+.animate-borderline {
+    animation: moveUp 1s ease forwards;
+}
 
 body {
     background: url('../assets/background.png');
@@ -32,11 +75,6 @@ body {
     margin-top: 320px;
 }
   
-/* .animate-borderline {
-    animation: moveUp 1s ease forwards;
-}
-   */
-
 .language {
     display: flex;
     justify-content: center;
@@ -50,6 +88,7 @@ body {
 
 .language .language-2 {
     margin-top: -170px;
+    opacity: 0; /* Max is 1*/
 }
 
 
