Add js function

--- a/src/home/home.css
+++ b/src/home/home.css
@@ -47,6 +47,10 @@
     transform: rotate(180deg);
 }
 
+.arrow-logo img:hover {
+    cursor: pointer;
+}
+
 /* SS24 */
 .container h2 {
     color: white;
